# Agentic-ai

./: README.md  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  behavior_analysis_agent.py  decision_agent.py  detection_agent.py  risk_scoring_agent.py  role_classification_agent.py  surveillance_agent.py  tracking_agent.py
alerts/: evidence_capture.py  hardware_alert.py
config/: config.yaml
dashboard/: app.py
dashboard/templates/: index.html
scripts/: download_models.py  export_model.py
src/agentic_exam_surveillance/: __init__.py  agents.py  evidence.py  main.py  models.py  risk.py
tests/: test_agent_pipeline.py  test_risk.py
utils/: alert_utils.py  openvino_utils.py  video_utils.py
